WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58484
REGRESSION(
r83397
) [Qt] When the video is loading and the poster is shown all the controls are hidden except the play button.
https://bugs.webkit.org/show_bug.cgi?id=58484
Summary
REGRESSION(r83397) [Qt] When the video is loading and the poster is shown all...
Alexis Menard (darktears)
Reported
2011-04-13 14:56:41 PDT
Run QtTestBrowser, open tiny.cc/wkmedia, and while the video is pre-loading the controls are not visible (except the play button).
Attachments
Proposed patch.
(1.75 KB, patch)
2011-04-13 15:09 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2011-04-13 15:09:18 PDT
Created
attachment 89473
[details]
Proposed patch.
Andreas Kling
Comment 2
2011-04-13 15:10:33 PDT
Comment on
attachment 89473
[details]
Proposed patch. r=me
Alexis Menard (darktears)
Comment 3
2011-04-14 05:12:48 PDT
Comment on
attachment 89473
[details]
Proposed patch. Clearing flags on attachment: 89473 Committed
r83838
: <
http://trac.webkit.org/changeset/83838
>
Alexis Menard (darktears)
Comment 4
2011-04-14 05:12:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug